change somethings